--- a/index.html
+++ b/index.html
@@ -3,26 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,400;0,700;1,300&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Easybank landing page</title>
-
+  <link rel="stylesheet" href="./main.css">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
+  <!-- <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  </style> -->
 </head>
 <body>
+  <header>
+    <nav class="navbar">
+      <div id="logoimg">
+        <img src="./images/logo.svg" alt="The logo of compny"/>
+      </div>
+      <div id="navbtn">
+          <a href="#" class="nav">Home</a>
+          <a href="#" class="nav">About</a>
+          <a href="#" class="nav">Contact</a>
+          <a href="#" class="nav">Blog</a>
+          <a href="#" class="nav">Careers</a>
+      </div>
+      <div class="requestbtn">
+        <input type="button" value="Request Invite" />
+      </div>
+    </nav>
+  </header>
 
-  Home
-  About
-  Contact
-  Blog
-  Careers
 
-  Request Invite
+  
+
+  
 
 
 
