--- a/index.html
+++ b/index.html
@@ -40,7 +40,21 @@
     </nav>
   </header>
   <section>
-    <img src="./images/bg-intro-mobile.svg" height="100%" width="100%"/>
+    <div class="section1">
+      <div class="s1div" id="div1">
+        <h1>Next generation <br>digital banking</h1>
+        <p style="">  Take your financial life online. Your Easybank account will be a one-stop-shop 
+          for spending, saving, budgeting, investing, and much more.</p>
+          <div class="requestbtn" id="reqbutton2">
+            <input type="button" value="Request Invite" />
+          </div>
+      </div>
+      <div class="s1div" id="div2">
+        <img src="./images/image-mockups.png" id="backimg"/>
+      </div>
+    </div>
+
+    
   </section>
   <section>
     <img src="./images/image-restaurant.jpg"/>
@@ -54,10 +68,9 @@
 
 
 
-  <!-- Next generation digital banking
+  <!-- 
 
-  Take your financial life online. Your Easybank account will be a one-stop-shop 
-  for spending, saving, budgeting, investing, and much more.
+
 
   Request Invite
 
