Adding the footer

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       </div>
     </div>
   </section>
-  <section class="section2">
+  <section class="section2 section3">
     <div id="s3div1">
       <h2>Latest Articles</h2>
     </div>
@@ -131,8 +131,42 @@
           It’s easy to request an invite through the site ...</p>
       </div>
     </div>
-
   </section>
+  <footer class="section2 footer">
+    <div class="footerdiv">
+      <div class="foooterlogo">
+        <img src="./images/logo.svg"/>
+      </div>
+      <div>
+        <img src="./images/icon-facebook.svg"/>
+        <img src="./images/icon-youtube.svg"/>
+        <img src="./images/icon-twitter.svg"/>
+        <img src="./images/icon-pinterest.svg"/>
+        <img src="./images/icon-instagram.svg"/>
+      </div>
+    </div>
+    <div class="footerdiv">
+      <a href="#">About Us</a>
+      <a href="#">Contact</a>
+      <a href="#">Blog</a>
+    </div>
+    <div class="footerdiv">
+      <a href="#">Careers</a>
+      <a href="#">Support</a>
+      <a href="#">Privacy Policy</a>
+    </div>
+    <div class="footerdiv">
+      <div>
+        <div class="requestbtn" id="reqbutton2">
+          <input type="button" value="Request Invite" />
+        </div>
+      </div>
+      <div>
+        <p>© Easybank. All Rights Reserved</p>
+      </div>
+    </div>
+
+  </footer>
   
 
 
@@ -143,16 +177,16 @@
 
 
   <!-- 
-  About Us
-  Contact
-  Blog
-  Careers
-  Support
-  Privacy Policy
+  
+  
+  
+  
+  
+  
 
   Request Invite
 
-  © Easybank. All Rights Reserved
+
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
